overflow fixing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
+
 html {
   scroll-behavior: smooth;
+  overflow-x:hidden;
 }
 
 :root {
@@ -12,7 +14,7 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  overflow-x: hidden;
+  overflow-x:hidden;
 }
 
 p {
